  percent of completeness of the task based on the
  **Task.total_logged_seconds** and **Task.schedule_seconds** attributes.
* **Fix:** Added TimeLog.__eq__() operator to more robustly check if the time
  logs are overlapping.
* **New:** Added **Project.percent_complete**,
  **Percent.total_logged_seconds** and **Project.schedule_seconds** attributes.

0.2.0.rc4
=========

* **New:** Added a new attribute to **Version** class called
  **latest_version** which holds the latest version in the version queue.
* **New:** To optimize the database connection times, *stalker.db.setup()* will
  not try to initialize the database every time it is called anymore. This
  leads a ~4x speed up in database connection setup. To initialize a newly
  created database please use::

    # for a newly created database
    from stalker import db
    db.setup() # connects to database
    db.init()  # fills some default values to be used with Stalker

    # for any subsequent access just use (don't need to call db.init())
    db.setup()

* **Update:** Removed all **__init_on_load()** methods from all of the classes.
  It was causing SQLAlchemy to eagerly load relations, thus slowing down
  queries in certain cases (especially in Task.parent -> Task.children
  relation).
* **Fix:** Fixed Vacation class tj3 format.
* **Fix:** **Studio.now** attribute was not properly working when the Studio
  instance has been restored from database.

0.2.0.rc3
=========

* **New:** Added a new attribute to **Task** class called **responsible**.
* **Update:** Removed **Sequence.lead_id** use **Task.reponsible** instead.
* **Update:** Updated documentation to include documentation about
  Configuring Stalker with ``config.py``.
* **Update:** The ``duration`` argument in Task class is removed. It is somehow
  against the idea of having ``schedule_model`` and ``schedule_timing``
  arguments (schedule_model='duration' is kind of the same).
* **Update:** Updated task documentation.

0.2.0.rc2
=========
