@@ -13,6 +13,8 @@ script_location = alembic
 
 #sqlalchemy.url = sqlite:///%(here)s/stalker.db
 sqlalchemy.url = postgresql+psycopg2://stalker_admin:stalker@localhost:5432/stalker
+#sqlalchemy.url = postgresql+psycopg2://stalker_admin:stalker@192.168.0.64:5432/stalker
+
 
 # Logging configuration
 [loggers]
